force-app/main/default/objects/Risks_and_Mitigations__c/Risks_and_Mitigations__c.object-meta.xml
<CustomObject>
    <label>Risks and Mitigations</label>
    <nameField>
        <label>Risk Identified</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risks and Mitigations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>