force-app/main/default/objects/Risks_and_Mitigations__c/fields/Mitigation__c.field-meta.xml
<CustomField>
    <fullName>Mitigation__c</fullName>
    <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc - R.10.2 Custom Field for Account Planning||
SFA -Y/PRM-N||
VAL -  N||
CR# -R10.2 # 35778  ||</description>
    <label>Mitigation</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>